# bazel_rules_install

./: .gitignore  .travis.yml  AUTHORS  BUILD.bazel  CONTRIBUTORS  MODULE.bazel  README.md  WORKSPACE  defs.bzl  deps.bzl  package.bzl  setup.bzl
.github/workflows/: push.yml
docs/: BUILD.bazel  MODULE.bazel  WORKSPACE  WORKSPACE.bzlmod  installer_rule.md  regen.sh
examples/: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  run_all.sh
installer/: BUILD.bazel  def.bzl  installer.bash.template
scripts/: install.sh  run_buildifier.sh  run_examples.sh  run_regen_docs.sh  run_tests.sh
src/: BUILD.bazel  installer.bash.template  installer.bzl
tests/: BUILD.bazel  installer_test.sh
tests/test_workspace/: BUILD.bazel  MODULE.bazel  WORKSPACE  data_from_another_workspace.txt
tests/testdata/subdir/: subdir_data.txt
