# Copyright 2018 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_skydoc//skylark:skylark.bzl", "skylark_doc")

licenses(["notice"])  # Apache 2.0

# To update docs, run:
# bazel build //:install-docs && unzip bazel-bin/install-docs-skydoc.zip -x index.md
skylark_doc(
    name = "install-docs",
    srcs = ["@com_github_google_rules_install//installer"],
)
