# Copyright 2018 The Bazel Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@com_github_google_rules_install//installer:def.bzl", "installer")

licenses(["notice"])  # Apache 2.0

installer(
    name = "installer_under_test",
    data = ["testdata/data.txt"],
    executable = False,
)

sh_test(
    name = "installer_test",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :installer_under_test)",
        "$(location testdata/data.txt)",
        "-executable=False",
    ],
    data = [
        "testdata/data.txt",
        ":installer_under_test",
    ],
)

installer(
    name = "executable_installer_under_test",
    data = ["testdata/executable.exe"],
)

sh_test(
    name = "executable_installer_test",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :executable_installer_under_test)",
        "$(location testdata/executable.exe)",
        "-executable=True",
    ],
    data = [
        "testdata/executable.exe",
        ":executable_installer_under_test",
    ],
)

installer(
    name = "subdir_installer_under_test",
    data = ["testdata/data.txt"],
    executable = False,
    target_subdir = "docs",
)

sh_test(
    name = "subdir_installer_test",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :subdir_installer_under_test)",
        "$(location testdata/data.txt)",
        "-subdir=docs",
        "-executable=False",
    ],
    data = [
        "testdata/data.txt",
        ":subdir_installer_under_test",
    ],
)

genrule(
    name = "generated_file",
    outs = ["generated_file.txt"],
    cmd = "echo this is a test file > $@",
)

installer(
    name = "generated_file_installer_under_test",
    data = [":generated_file"],
    executable = False,
)

sh_test(
    name = "generated_file_installer_test",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :generated_file_installer_under_test)",
        "$(location :generated_file)",
        "-executable=False",
    ],
    data = [
        ":generated_file",
        ":generated_file_installer_under_test",
    ],
)

installer(
    name = "multifile_installer_under_test",
    data = [
        "testdata/data.txt",
        "testdata/executable.exe",
        "testdata/subdir/subdir_data.txt",
    ],
    executable = False,
)

# Test each result separately
sh_test(
    name = "multifile_installer_test_1",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :multifile_installer_under_test)",
        "$(location testdata/data.txt)",
        "-executable=False",
    ],
    data = [
        "testdata/data.txt",
        ":multifile_installer_under_test",
    ],
)

sh_test(
    name = "multifile_installer_test_2",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :multifile_installer_under_test)",
        "$(location testdata/executable.exe)",
        # At the moment the multifile installer can't mix modes.
        "-executable=False",
    ],
    data = [
        "testdata/executable.exe",
        ":multifile_installer_under_test",
    ],
)

sh_test(
    name = "multifile_installer_test_3",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :multifile_installer_under_test)",
        "$(location testdata/subdir/subdir_data.txt)",
        "-executable=False",
    ],
    data = [
        "testdata/subdir/subdir_data.txt",
        ":multifile_installer_under_test",
    ],
)

installer(
    name = "filegroup_installer_under_test",
    data = [":test_filegroup"],
    executable = False,
)

filegroup(
    name = "test_filegroup",
    data = [
        "testdata/data.txt",
        "testdata/subdir/subdir_data.txt",
    ],
)

sh_test(
    name = "filegroup_installer_test_1",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :filegroup_installer_under_test)",
        "$(location testdata/subdir/subdir_data.txt)",
        "-executable=False",
    ],
    data = [
        "testdata/subdir/subdir_data.txt",
        ":filegroup_installer_under_test",
    ],
)

sh_test(
    name = "filegroup_installer_test_2",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :filegroup_installer_under_test)",
        "$(location testdata/data.txt)",
        "-executable=False",
    ],
    data = [
        "testdata/data.txt",
        ":filegroup_installer_under_test",
    ],
)

installer(
    name = "other_workspace_installer_under_test",
    data = [
        "@com_github_google_rules_install_test_workspace//:data_from_another_workspace.txt",
    ],
    executable = False,
)

sh_test(
    name = "other_workspace_installer_test",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :other_workspace_installer_under_test)",
        "$(location @com_github_google_rules_install_test_workspace//:data_from_another_workspace.txt)",
        "-executable=False",
    ],
    data = [
        ":other_workspace_installer_under_test",
        "@com_github_google_rules_install_test_workspace//:data_from_another_workspace.txt",
    ],
)

installer(
    name = "filegroup_from_another_workspace_installer_under_test",
    data = ["@com_github_google_rules_install_test_workspace//:test_filegroup"],
    executable = False,
)

sh_test(
    name = "filegroup_from_another_workspace_installer_test_1",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :filegroup_from_another_workspace_installer_under_test)",
        "$(location @com_github_google_rules_install_test_workspace//:data_from_another_workspace.txt)",
        "-executable=False",
    ],
    data = [
        ":filegroup_from_another_workspace_installer_under_test",
        "@com_github_google_rules_install_test_workspace//:data_from_another_workspace.txt",
    ],
)

sh_test(
    name = "filegroup_from_another_workspace_installer_test_2",
    srcs = ["installer_test.sh"],
    args = [
        "$(location :filegroup_from_another_workspace_installer_under_test)",
        "$(location @com_github_google_rules_install_test_workspace//:subdir/subdir_data.txt)",
        "-executable=False",
    ],
    data = [
        ":filegroup_from_another_workspace_installer_under_test",
        "@com_github_google_rules_install_test_workspace//:subdir/subdir_data.txt",
    ],
)
